syntax = "proto3";

service UserService {
	rpc Login(User) returns (Token) {}
    rpc ValidateToken (Token) returns (Token) {}
}

message User {
    string id = 1;
    string username = 2;
    string password = 3;
}

message Token {
    string token = 1;
    bool valid = 2;
    Error error = 3;
}

message Error {
    int32 code = 1;
    string message = 2;
}